tests/parser/tests/cases/should_fail/missing_raw_ref_type/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:1
1 |   let k: &raw = &raw [1,2,3,4,5,6];
  |   ^^^ here
  = note: Expected an expression, however received the identifier `k`.
